--- a/TODO.txt
+++ b/TODO.txt
@@ -2,25 +2,32 @@ Terra pendant - terra quiver????
 (sprite and accessory stats change)
 
 High Hazard destroy boulder particles
-shell and rebels not stackable
-elder beam rework
+Shell and Rebels not stackable
+Elder beam rework
 Myst Sickle sprite
-add caer spreader recipe
-Cursed Knife mob drop
-speed/life stones to not stack
-spawner for sand elemental
-pre-plantera lacking weapons
+Add caer spreader recipe / tweak sprite
+Cursed Knife mob drop (low chance)
+Speed/life stones to not stack
+Spawner for sand elemental
+Pre-Plantera lacking weapons
 
-new shit
-junggle themed bow (blade of grass)
-upgraded musket
-molten tier thrower weapon ((or 2)on fire!) / fiery fragment?
-thrower weapon with unique attack to skeletron dungeon mob drops
+
+Junggle themed bow (blade of grass)
+Upgraded musket (Higher dmg, more modern sprite)
+Molten tier thrower weapon ((or 2)on fire!) / fiery fragment?
+Thrower weapon with unique attack to skeletron dungeon mob drops
 +Brid armor / post-skeletron (bones,molten bars,meteorite bars,bee)
+(best pre-hardmode armor)
 
-v0.04
-adamantite cap sprite/ name????
+Adamantite Cap sprite / name tweak
 Debuffs on some acc i.e more dmg less deff
-make caer warriors spawn post-plantera ((need a biome)hallow biome low chance?)
-no use for Light Leather
-rightclick use items
+Make caer warriors spawn post-plantera ((need a biome)hallow biome low chance?)
+Rightclick use items
+
+Small starter bag with goodies
+
+No use for Light Leather ! / delete since vanilla?
+No use for Gold Nuggets ! / delete since vanilla?
+Only 1 use for White Feather
+Only 2 uses for Fiery Fragment (25 gold)
+
