--- a/Changelog.txt
+++ b/Changelog.txt
@@ -51,5 +51,6 @@ Corrupted Sickle added
 Golden Dagger added
 Lotus Spear added / + Junggle override dust
 Hallowed, Titanium, Adamantite thrower helmets added / with respective set effects
+Recipes fixed to use (RecipeGroupID's)
 Venom Fist knockback fixed / melee weapon scaling
 Thrower Emblem now accepted for Avenger Emblem recipe
