--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,9 @@ Elder beam rework
 Myst Sickle sprite
 Speed/life stones to not stack
 Debuffs on some acc i.e more dmg less deff
+
 Rightclick use items
+pistol with increased right-click dmg but lowered speed
 
 
 PRE HARDMODE
