--- a/Changelog.txt
+++ b/Changelog.txt
@@ -61,5 +61,6 @@ Thrower Emblem now accepted for Avenger Emblem recipe
 
 v 0.1.07
 Toxicodendron added
+Wind Wave added
 Potent Poison added / applied to Lotus Spear+Toxicod.
 Harpy Duster projectile sprite changed
