--- a/Changelog.txt
+++ b/Changelog.txt
@@ -65,3 +65,4 @@ Wind Wave added
 Potent Poison added / applied to Lotus Spear+Toxicod.
 Harpy Duster projectile sprite changed
 Crimson/Corruption Sickles moved to post-brain/worm
+Terra's Pendant renamed to Terra Quiver / new stats + inherited magic quiver attributes
