--- a/Changelog.txt
+++ b/Changelog.txt
@@ -67,3 +67,4 @@ Endless Caerulean Arrow Quiver added
 Harpy Duster projectile sprite changed
 Crimson/Corruption Sickles moved to post-brain/worm
 Terra's Pendant renamed to Terra Quiver / new stats + inherited magic quiver attributes
+Sharpenned Arrow Tip now only boosts arrow damage
