--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,11 +2,16 @@ v 0.1.07
 Toxicodendron added
 Wind Wave added
 Endless Caerulean Arrow Quiver added
+AK-47 added
+L96 AWP added
+
 Potent Poison added / applied to Lotus Spear+Toxicod.
 Harpy Duster projectile sprite changed
 Crimson/Corruption Sickles moved to post-brain/worm
 Terra's Pendant renamed to Terra Quiver / new stats + inherited magic quiver attributes
 Sharpenned Arrow Tip now only boosts arrow damage
+
+Ranged weapon rarities / prices re-set
 
 Light Leather removed
 
@@ -15,3 +20,4 @@ Accessory draw sprite additions
 *
 
 Caerulean Armor sprite fixes
+Elois, Caeulean, Fiery fragment sprite changes
