--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,5 +21,6 @@ Accessory draw sprite additions
 *
 
 Caerulean Armor sprite fixes
+Adamantite Crown sprite changed
 Elois, Caeulean, Fiery fragment sprite changes
 Harpy Duster projectile sprite changed
