--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,3 +24,5 @@ Caerulean Armor sprite fixes
 Adamantite Crown sprite changed
 Elois, Caeulean, Fiery fragment sprite changes
 Harpy Duster projectile sprite changed
+
+Plasma Bow shoot sound changed
