--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,3 +27,5 @@ Harpy Duster projectile sprite changed
 
 Plasma Bow shoot sound added ~ custom()
 AK47 shoot sound added
+
+New Rarity added / soon implemented on post-ml gear etc
