--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,5 +5,5 @@ Laser.cs added / light animated projectile / spreads into 2 after half (proj.tim
 Tooltip.SetDefault("Colors of the rainbow!"+
 "\nShoots a projectile that spreads into two after 0.6s"+
 "\nProjectiles do 50% more damage after spreading"+
-"\nTurns the room into an RGB party!"+
+"\nTurns the room into an RGB party"+
 );
