--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
 v 0.1.1.4
 
+Cloud Bolt added / Pre-Bosses ~ Magic
+
 HighHazard reworked ~ include projectile trailing, smoke gore, dust
+Caerulean Warrior not dropping Caerulean Fragments in multiplayer fixed
+Fiery Fragments moved to post-skeletron hell mob drops
