--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,9 @@ v 0.1.1.4
 
 Cloud Bolt added / Pre-Bosses ~ Magic
 
+Witch Dream stats and recipe changed
+Dobby - name changed to Interitus Codex, new sprite, new stats
 HighHazard reworked ~ include projectile trailing, smoke gore, dust
+
 Caerulean Warrior not dropping Caerulean Fragments in multiplayer fixed
 Fiery Fragments moved to post-skeletron hell mob drops
