--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Cloud Bolt added / Pre-Bosses ~ Magic
 Witch Dream stats and recipe changed
 Dobby - name changed to Interitus Codex, new sprite, new stats
 HighHazard reworked ~ include projectile trailing, smoke gore, dust
+Life stones starting from Vix now include Philisopher's Stone in recipe and add the effect
 
 Caerulean Warrior not dropping Caerulean Fragments in multiplayer fixed
 Fiery Fragments moved to post-skeletron hell mob drops
