--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Myst Sickle sprite
 Debuffs on some acc i.e more dmg less deff
 Celeritas - make into boots
 Witch Dream - rename, resprite, reconsider item stats. Recipe is fine
+Upgrade to interitus codex, add attack speed and max mana // 2nd UNHOLY TIER
+Upgrade to terra quiver, general ranged dmg, att speed, some defense // 3rd unh
 
 Rightclick use items
 
