--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@ v 0.1.1.4
 
 Toxicodendron/Lotus Spear debuff de-spawning NPC's fixed
 Caerulean Warrior not dropping Caerulean Fragments in multiplayer fixed
+Caerulean ore now only generates in hallowed underground
 HighHazard reworked ~ include projectile trailing, smoke gore, dust
 Life stones starting from Vix now now gain reduced health potion cd
 Celeritas changed to Boots Of Celeritas ~ new recipe ~ new item stats ~ 4 def
@@ -20,7 +21,7 @@ Fiery Fragments moved to post-skeletron hell mob drops
 Accessory prices missing fixed
 Golden Nuggets removed
 
-~~~~~Content Update~~~~~~
+v 0.1.1.8
 
 Cloud Bolt added / Pre-Bosses ~ Magic
 Hunter armor set added ~ post-skeletron ~ thrower
